language/move-lang/tests/move_check/parser/address_too_long.exp
error: 

   ┌── tests/move_check/parser/address_too_long.move:2:9 ───
   │
 2 │ address 0x112233445566778899101122334455667788992011223344556677889930112233:
   │         ^ The address [17, 34, 51, 68, 85, 102, 119, 136, 153, 16, 17, 34, 51, 68, 85, 102, 119, 136, 153, 32, 17, 34, 51, 68, 85, 102, 119, 136, 153, 48, 17, 34, 51] is of invalid length. Addresses are at most 32-bytes long
   │

